example_guestbook/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  backend:
    serviceName: frontend
    servicePort: 80
